--- a/environment.yml
+++ b/environment.yml
@@ -10,6 +10,7 @@ dependencies:
   - ipywidgets=8.0.2
   - jupyter_core=4.11.1
   - jupyterlab_widgets=3.0.3
+  - libopencv=4.6.0
   - matplotlib=3.6.0
   - numpy=1.23.3
   - opencv=4.6.0
@@ -17,6 +18,7 @@ dependencies:
   - pillow=9.2.0
   - pip=22.2.2
   - python=3.9.13
+  - py-opencv=4.6.0
   - pytorch=1.10.2
   - torchvision=0.11.3
   - pip:
