--- a/environment.yml
+++ b/environment.yml
@@ -15,9 +15,9 @@ dependencies:
   - pandas=1.5.0
   - pillow=9.2.0
   - pip=22.2.2
+  - opencv-python-headless==4.6
   - python=3.9.13
   - pytorch=1.10.2
   - torchvision=0.11.3
   - pip:
     - gradio==3.4
-    - opencv-python-headless
