--- a/environment.yml
+++ b/environment.yml
@@ -15,7 +15,7 @@ dependencies:
   - pandas=1.5.0
   - pillow=9.2.0
   - pip=22.2.2
-  - opencv-python-headless==4.6.0.66
+  - py-opencv==4.6
   - python=3.9.13
   - pytorch=1.10.2
   - torchvision=0.11.3
